(executables
  (names normform_web normform_cli)
  (libraries js_of_ocaml-lwt js_of_ocaml-tyxml)
  (preprocess (pps js_of_ocaml-ppx  ) ) )

(rule
  (targets normform_web.js)
  (action
    (run %{bin:js_of_ocaml} --noruntime %{lib:js_of_ocaml-compiler:runtime.js}
         --source-map %{dep:normform_web.bc} -o %{targets} --pretty)))

(ocamllex normform_lex) 
(ocamlyacc normform_pars)

(rule 
  (targets normform)
  (deps normfom_base.ml normform_lex.ml normform_pars.ml) 
  (action (run ocamlbuild normform.native)))

(alias
  (name DEFAULT)
  (deps normform_web.js normform_cli.exe))
