(ocamllex normform_lex) 
(ocamlyacc normform_pars)

(library
  (name point)
  (modules normform normform_base normform_lex normform_pars))


(executables
  (names normform_web normform_cli)
  (libraries js_of_ocaml js_of_ocaml-tyxml point)
  (modules normform_web normform_cli)
  (preprocess (pps js_of_ocaml-ppx  ) ) )

(rule
  (targets normform_web.js)
  (action
    (run %{bin:js_of_ocaml} --noruntime %{lib:js_of_ocaml-compiler:runtime.js}
         --source-map %{dep:normform_web.bc} -o %{targets} --pretty)))

(alias
  (name DEFAULT)
  (deps normform_web.js normform_cli.exe))
