(ocamllex lex) 
(ocamlyacc pars)

(library
  (name point)
  (modules lib base lex pars))

(executables
  (names point_web point_cli)
  (libraries js_of_ocaml js_of_ocaml-tyxml point)
  (modules point_web point_cli)
  (preprocess (pps js_of_ocaml-ppx  ) ) )

(rule
  (targets point_web.js)
  (action
    (run %{bin:js_of_ocaml} --noruntime %{lib:js_of_ocaml-compiler:runtime.js}
         --source-map %{dep:point_web.bc} -o %{targets} --pretty)))

(alias
  (name default)
  (deps point_web.js point_cli.exe))
